bobcat (2.09.03) WIP

  * Repaired Arg::firstNonEmpty which didn't check for 0-pointers to the
    string receiving the option's value. 

  * Reorganized man-pages to comply with include requirements of Yodl 3.00.0

 -- Frank B. Brokken <f.b.brokken@rug.nl>  Sun, 05 Dec 2010 19:20:46 +0100

bobcat (2.09.02)

  * No 'virtual ~Mbuf() = default': destructor removed from Mbuf.

 -- Frank B. Brokken <f.b.brokken@rug.nl>  Thu, 04 Nov 2010 12:45:40 +0100

bobcat (2.09.01)

  * Mstream::id() now returns a long, rather than an int. See
    http://developers.sun.com/solaris/articles/ILP32toLP64Issues.html

 -- Frank B. Brokken <f.b.brokken@rug.nl>  Wed, 03 Nov 2010 11:55:17 +0100

bobcat (2.09.00)

  * Added new classes ReadLineBuf and ReadLineStream reading the standard
    input using the Gnu readline library, wrapped inside, respectively, a
    streambuf and an istream. These classes require linkage to libreadline.
    The class ReadLineBuf is a singleton class.

  * Added new class ReadLineHistory allowing easy handling of the history
    accumulated by the ReadLineBuf class.  The class ReadLineHistory is a
    singleton class.

  * Virtual members of classes derived from std::streambuf were move to the
    the private section of the classes, making these classes more compliant
    with Liskov's Substitution Principle.

  * The 'sync' members of classes derived from std::streambuf can be called
    from derived classes using a protected 'pSync' member. The IOStreambuf
    class offers comparable protected 'pSeekoff' and 'pSeekpos' and 'pXsputn',
    allowing the seek and put operations to be performed on request 
    by classes derived from IOStreambuf.

  * NOTE: Errno's virtual member what() will be moved to Errno's private
          section in a future release. The new public member 'why' should be
          used instead, or std::exception::what() should be used.

  * The class Msg is now deprecated. Classes Mstream (Message stream) and Mbuf