@@ -10,7 +10,7 @@ size_t ArgConfig::option(string *value, char const *longOption) const
     const_RE_iterator optIt = longConfigOpt(longOption);
 
     ret = endRE() - optIt;
-    if (ret != 0)
+    if (value && ret != 0)
         *value = findKeyTail(longOption, 0);
 
     return ret;
