@@ -1,4 +1,11 @@
-bobcat (2.09.03) WIP
+bobcat (2.09.04)
+
+  * Repaired ArgConfig::option(string *value, ...) members which didn't check
+    for 0-pointers to the string receiving the option's value. 
+
+ -- Frank B. Brokken <f.b.brokken@rug.nl>  Mon, 06 Dec 2010 23:38:44 +0100
+
+bobcat (2.09.03)
 
   * Repaired Arg::firstNonEmpty which didn't check for 0-pointers to the
     string receiving the option's value. 
